fix: popup z-index

--- a/src/block/popup/popup.css
+++ b/src/block/popup/popup.css
@@ -9,4 +9,6 @@
   align-items: center;
   visibility: hidden;
   background-color: white;
+
+  z-index: 2;
 }
